# TradingBot

./: README.md  config.py  get_data.py  keep_alive.py  main.py  pyproject.toml
templates/: index.html
